--- a/Git_Gitgub/index.html
+++ b/Git_Gitgub/index.html
@@ -17,7 +17,7 @@ git status - tekshirish
 git init - git ni ishga tushirish
 git add . (git add -A) - ro'yxatga turish
 git commit -m "komen" - ro'yxatga olish 
-
+git log - barchasini aniqlab beradi
 
 
 
