--- a/Git_Gitgub/index.html
+++ b/Git_Gitgub/index.html
@@ -18,6 +18,8 @@ git init - git ni ishga tushirish
 git add . (git add -A) - ro'yxatga turish
 git commit -m "komen" - ro'yxatga olish 
 git log - barchasini aniqlab beradi
+git branch - brench ni aniqlash
+git branch " " - yangi branch qo'shish
 
 
 
