--- a/Git_Gitgub/index.html
+++ b/Git_Gitgub/index.html
@@ -20,6 +20,7 @@ git commit -m "komen" - ro'yxatga olish
 git log - barchasini aniqlab beradi
 git branch - brench ni aniqlash
 git branch " " - yangi branch qo'shish
+git push - github ga qo'yilgan malumod ga qo'shimcha malumod qo'shish
 
 
 
